Javac plugin rework