@@ -9,9 +9,6 @@ configurations {
     testSource {
         canBeResolved = true
     }
-    asmRuntimeClasspath {
-        canBeResolved = true
-    }
 }
 
 dependencies {
@@ -22,42 +19,22 @@ dependencies {
     }
     api project(':opensesame-core')
     implementation libs.asm.core
+    implementation libs.javacpostprocessor
 
     testSource project(path: ':testtargets', configuration: 'testSource')
-    asmRuntimeClasspath project(path: ':opensesame-compile', configuration: 'asmRuntimeElements')
-}
-
-// bootstrapping! The javac plugin can use OpenSesame itself via this
-def tempClassesDir = layout.buildDirectory.dir("tempClasses/compileJava")
-var asmCompileMain = tasks.register('processMainClasses', JavaExec) {
-    dependsOn compileJava
-    dependsOn configurations.asmRuntimeClasspath
-    inputs.dir(tempClassesDir)
-    inputs.files(configurations.asmRuntimeClasspath)
-    outputs.dir(sourceSets.main.output.classesDirs)
-    doFirst {
-        sourceSets.main.output.classesDirs.singleFile.deleteDir()
-    }
-    classpath = configurations.asmRuntimeClasspath
-    mainClass.set 'dev.lukebemish.opensesame.compile.asm.VisitingProcessor'
-    args = [tempClassesDir.get().asFile.canonicalPath, sourceSets.main.output.classesDirs.singleFile.canonicalPath]
-}
-
-tasks.named('compileJava', JavaCompile).configure {
-    destinationDirectory.set(tempClassesDir)
-}
-
-tasks.named('classes').configure {
-    dependsOn asmCompileMain
+    testAnnotationProcessor project(':opensesame-javac')
 }
 
 tasks.named('compileTestJava', JavaCompile).configure {
     dependsOn(configurations.testSource)
     source(configurations.testSource)
-    options.compilerArgs.add '-Xplugin:OpenSesame'
-    dependsOn(tasks.compileJava)
-    inputs.files(sourceSets.main.output.classesDirs)
-    inputs.files(sourceSets.main.runtimeClasspath)
+    options.compilerArgs.add '-Xplugin:dev.lukebemish.javac-post-processor dev.lukebemish.opensesame'
+    // For javac-post-processor
+    options.forkOptions.jvmArgs.addAll([
+            '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+            '--add-exports=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED',
+            '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
+    ])
 }
 
 publishing {
